Refs #3 fix プロジェクト生成後にSwiftLintのルールが適用されるところまで

--- a/Project-iOS/XLProjectName/Podfile
+++ b/Project-iOS/XLProjectName/Podfile
@@ -12,7 +12,7 @@ def app_pods
     pod 'Device', '~> 2.0'
     pod 'Decodable', '~> 0.5'
     pod 'DynamicColor', '~> 3.0'
-    pod 'Eureka', '~> 2.0.0-beta.1'
+    #pod 'Eureka', '~> 2.0.0-beta.1'
     pod 'Fabric', '~> 1.6'
     pod 'KeychainAccess', '~> 3.0'
     pod 'NVActivityIndicatorView', '~> 3.0'
@@ -23,9 +23,10 @@ def app_pods
     pod 'RxAlamofire', '~> 3.0'
     pod 'RxCocoa', '~> 3.0'
     pod 'RxSwift', '~> 3.0'
-    pod 'SwiftDate', '~> 4.0'
+    #pod 'SwiftDate', '~> 4.0'
     pod 'WebLinking', :git => 'https://github.com/kylef/WebLinking.swift', :branch => 'master'
     pod 'XLSwiftKit', '~> 2.0'
+    pod 'SwiftLint', '~> 0.24.2'
 end
 
 def testing_pods
