--- a/Project-iOS/XLProjectName/.swiftlint.yml
+++ b/Project-iOS/XLProjectName/.swiftlint.yml
@@ -1,10 +1,12 @@
 disabled_rules: # rule identifiers to exclude from running
+  - line_length            # 1 行の長さ
+  - trailing_whitespace    # 行末に余計なスペース
 #  - colon
 #  - comma
 #  - control_statement
 #  - file_length
 #  - force_cast
-  - force_try
+#  - force_try
 #  - function_body_length
 #  - leading_whitespace
 #  - line_length
@@ -16,35 +18,42 @@ disabled_rules: # rule identifiers to exclude from running
 #  - todo
 #  - trailing_newline
 #  - trailing_semicolon
-  - trailing_whitespace
 #  - type_body_length
 #  - type_name
-  - valid_docs
-  - variable_name
-  - variable_name_min_length
+#  - valid_docs
+#  - variable_name
+#  - variable_name_min_length
 #  - variable_name_max_length
 excluded: # paths to ignore during linting. overridden by `included`.
   - Carthage
   - Pods
   - fastlane
   - XLProjectName/Helpers/R-Swift/R.generated.swift
-# parameterized rules can be customized from this configuration file
-file_length:
-  - 700
-  - 1000
-line_length:
-  - 230
-  - 250
-# parameterized rules are first parameterized as a warning level, then error level.
-function_body_length:
-  - 150 # warning
-  - 200 # error
-type_body_length:
-  - 300 # warning
-  - 400 # error
-variable_name_max_length:
-  - 30 # warning
-  - 40 # error
-variable_name_min_length:
-  - 2 # warning
-  - 1 # error
+opt_in_rules:
+  - force_unwrapping
+
+# error 扱いにするルール
+force_cast: error          # [NG] as!
+force_unwrapping: error    # [NG] value!
+opening_brace: error       # [NG] if x == 0{ / [OK] if x == 0 {
+statement_position: error  # [NG] if x == 0 \n { / [OK] if x == 0 {
+return_arrow_whitespace: error # [NG] func foo()->Int / [OK] func foo() -> Int
+colon: error               # [NG] let x:Int = 0 / [OK] let x: Int = 0
+comma: error               # [NG] foo(x,y , z) / [OK] foo(x, y, z)
+
+# warning 扱いにするルール
+control_statement: warning # [NG] if (x == 0) / [OK] if x == 0
+force_try: warning         # [NG] try! throwableFunc()
+
+variable_name:
+  max_length:
+    warning: 30
+    error: 40
+  min_length:
+    warning: 3
+    error: 0
+  excluded:
+    - id
+    - x
+    - y
+    - z
