--- a/Project-iOS/XLProjectName/XLProjectName.xcodeproj/xcshareddata/xcschemes/XLProjectName-Adhoc.xcscheme
+++ b/Project-iOS/XLProjectName/XLProjectName.xcodeproj/xcshareddata/xcschemes/XLProjectName-Adhoc.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0810"
+   LastUpgradeVersion = "0910"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2841F1D91CCFF55600D609CE"
-               BuildableName = "XLProjectName-Staging.app"
-               BlueprintName = "XLProjectName-Staging"
+               BlueprintIdentifier = "2867E8261C74C7D400FCEBBD"
+               BuildableName = "XLProjectName.app"
+               BlueprintName = "XLProjectName"
                ReferencedContainer = "container:XLProjectName.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,15 +26,16 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2841F1D91CCFF55600D609CE"
-            BuildableName = "XLProjectName-Staging.app"
-            BlueprintName = "XLProjectName-Staging"
+            BlueprintIdentifier = "2867E8261C74C7D400FCEBBD"
+            BuildableName = "XLProjectName.app"
+            BlueprintName = "XLProjectName"
             ReferencedContainer = "container:XLProjectName.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -42,9 +43,10 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Adhoc"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -55,9 +57,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2841F1D91CCFF55600D609CE"
-            BuildableName = "XLProjectName-Staging.app"
-            BlueprintName = "XLProjectName-Staging"
+            BlueprintIdentifier = "2867E8261C74C7D400FCEBBD"
+            BuildableName = "XLProjectName.app"
+            BlueprintName = "XLProjectName"
             ReferencedContainer = "container:XLProjectName.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -74,9 +76,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2841F1D91CCFF55600D609CE"
-            BuildableName = "XLProjectName-Staging.app"
-            BlueprintName = "XLProjectName-Staging"
+            BlueprintIdentifier = "2867E8261C74C7D400FCEBBD"
+            BuildableName = "XLProjectName.app"
+            BlueprintName = "XLProjectName"
             ReferencedContainer = "container:XLProjectName.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -85,7 +87,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Adhoc"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
