Refs #4 fix Xcodeビルド設定最適化

--- a/Project-iOS/XLProjectName/XLProjectName/Supporting Files/Config.Adhoc.xcconfig
+++ b/Project-iOS/XLProjectName/XLProjectName/Supporting Files/Config.Adhoc.xcconfig
@@ -8,4 +8,4 @@
 #include "Pods/Target Support Files/Pods-XLProjectName/Pods-XLProjectName.adhoc.xcconfig"
 
 PRODUCT_BUNDLE_IDENTIFIER=XLOrganizationIdentifier.XLProjectName.adhoc
-OTHER_SWIFT_FLAGS = $(inherited) "-D" "ADHOC" "-D" "COCOAPODS" "-Xfrontend" "-warn-long-function-bodies=150"
+OTHER_SWIFT_FLAGS = $(inherited) "-Onone" "-D" "ADHOC" "-D" "COCOAPODS" "-Xfrontend" "-warn-long-function-bodies=150"
