--- a/Project-iOS/XLProjectName/Podfile
+++ b/Project-iOS/XLProjectName/Podfile
@@ -57,8 +57,9 @@ def app_pods
 end
 
 def testing_pods
-    pod 'Quick', '~> 1.0'
-    pod 'Nimble', '~> 5.0'
+    pod 'RealmSwift', '~> 2.0'
+    pod 'Quick', '~> 1.2.0'
+    pod 'Nimble', '~> 7.0.3'
 end
 
 target 'XLProjectName' do
