Refs #37 fix 各種ヘルパーと拡張の実装を完了
* テスト追加
* テストターゲット修正
* Object, Result Extension
* Realm操作用ヘルパー
* RealmProviderを簡潔に
* サンプルコードで利用していた箇所を微調整

--- a/Project-iOS/XLProjectName/Podfile
+++ b/Project-iOS/XLProjectName/Podfile
@@ -66,11 +66,11 @@ target 'XLProjectName' do
     app_pods
 end
 
-target 'Tests' do
+target 'XLProjectNameTests' do
   testing_pods
 end
 
-target 'UITests' do
+target 'XLProjectNameUITests' do
     testing_pods
 end
 
