[fix] 環境変数で切り分けていた各キー値をxcconfigで切り分け
#if DEBUG 節を多用しなくていいのでコードが読みやすくなるのと、設定周りが一元管理されるため可読性が向上するためにxcconfigに集約。
キーを切り替える場合は、Config.Debug.xcconfig, Config.Adhoc.xcconfig, Config.Release.xcconfigで値を設定する。

--- a/Project-iOS/XLProjectName/XLProjectName/Supporting Files/Config.Release.xcconfig
+++ b/Project-iOS/XLProjectName/XLProjectName/Supporting Files/Config.Release.xcconfig
@@ -9,3 +9,8 @@
 
 PRODUCT_BUNDLE_IDENTIFIER=XLOrganizationIdentifier.XLProjectName.release
 OTHER_SWIFT_FLAGS = $(inherited)
+
+// Push Notification
+NCMB_APPLICATION_KEY = mBaasで作成したアプリケーションキーを設定
+NCMB_CLIENT_KEY = mBaasで作成したクライアントキーを設定
+AWS_SNS_PLATFORM_ARN = AWS SNSで作成したApplicationのARNを設定
