--- a/Project-iOS/XLProjectName/XLProjectName/Supporting Files/Info.plist
+++ b/Project-iOS/XLProjectName/XLProjectName/Supporting Files/Info.plist
@@ -2,29 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>Fabric</key>
-	<dict>
-		<key>Kits</key>
-		<array>
-			<dict>
-				<key>KitInfo</key>
-				<dict>
-					<key>customerSecret</key>
-					<string>XLCrashlyticsCustomerSecret</string>
-					<key>customerKey</key>
-					<string>XLFabricAPIKey</string>
-				</dict>
-				<key>KitName</key>
-				<string>Crashlytics</string>
-			</dict>
-		</array>
-		<key>APIKey</key>
-		<string>XLFabricAPIKey</string>
-	</dict>
+	<key>AWS SnsPlatformArn</key>
+	<string>$(AWS_SNS_PLATFORM_ARN)</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
-	<key>LSApplicationCategoryType</key>
-	<string></string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -41,8 +22,33 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>XLFabricAPIKey</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict>
+					<key>customerKey</key>
+					<string>XLFabricAPIKey</string>
+					<key>customerSecret</key>
+					<string>XLCrashlyticsCustomerSecret</string>
+				</dict>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NCMB ApplicationKey</key>
+	<string>$(NCMB_APPLICATION_KEY)</string>
+	<key>NCMB ClientKey</key>
+	<string>$(NCMB_CLIENT_KEY)</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
