add FilePathExtension, update swiftlint.yml

--- a/Project-iOS/XLProjectName/.swiftlint.yml
+++ b/Project-iOS/XLProjectName/.swiftlint.yml
@@ -7,9 +7,11 @@ excluded:
 
 # 無効にするルール
 disabled_rules:
-  - line_length            # 1 行の長さ
-  - trailing_whitespace    # 行末に余計なスペース
-  - force_try              # try!
+  - line_length             # 1 行の長さ
+  - trailing_whitespace     # 行末に余計なスペース
+  - force_try               # try!
+  - explicit_type_interface # プロパティ宣言時の型の明記必須
+  - fatal_error_message     # fataleError呼び出し時のメッセージ必須
 
 # error 扱いにするルール
 force_cast: error              # [NG] as!
